--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,1 @@
-spring.config.mosquitto.broker.username = mosquittoserver
-spring.config.mosquitto.broker.password = dfsaf43f44h7th6455!
+spring.data.mongodb.uri=mongodb://localhost:27017/smartdata
