--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "@swimlane/ngx-charts": "^16.0.0",
     "bootstrap": "^5.0.0-beta1",
+    "chart.js": "^2.9.4",
+    "echarts": "^5.0.0",
+    "jqwidgets-ng": "^11.0.1",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
